<resources>
    <string name="app_name">Télécommande</string>
    <string name="b_power_text">ON / OFF</string>
    <string name="b_home_text">HOME</string>
    <string name="b_volume_up_text">V+</string>
    <string name="b_volume_down_text">V-</string>
    <string name="b_program_up_text">P+</string>
    <string name="b_program_down">P-</string>
    <string name="edit_text_ip_address_default">Adresse IP de la Bbox</string>
    <string name="b_search_target_text">Scan</string>
    <string name="b_0_text">0</string>
    <string name="b_1_text">1</string>
    <string name="b_2_text">2</string>
    <string name="b_3_text">3</string>
    <string name="b_4_text">4</string>
    <string name="b_5_text">5</string>
    <string name="b_6_text">6</string>
    <string name="b_7_text">7</string>
    <string name="b_8_text">8</string>
    <string name="b_9_text">9</string>
    <string name="b_ok_text">OK</string>
    <string name="b_left_arrow_text">G</string>
    <string name="b_up_arrow_text">H</string>
    <string name="b_right_arrow_text">D</string>
    <string name="b_down_arrow_text">B</string>
    <string name="b_volume_mute_text">Mute</string>
    <string name="b_fast_rewind_text">Rewind</string>
    <string name="b_record_text">Record</string>
    <string name="b_stop_text">Stop</string>
    <string name="b_fast_forward_text">Forward</string>
    <string name="b_play_pause_text">Play / Pause</string>
    <string name="b_back_text">Return</string>
    <string name="b_quit_text">Quit</string>
</resources>
