<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <ImageButton
            android:id="@+id/b_back"
            android:src="@drawable/ic_keyboard_return_black_24dp"
            android:contentDescription="@string/b_back_text"
            android:tag="13"
            android:layout_width="60dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@+id/b_7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/b_0"/>

    <Button
            android:text="@string/b_0_text"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:id="@+id/b_0"
            android:tag="59"
            style="@style/Widget.AppCompat.Button.Small"
            app:layout_constraintTop_toBottomOf="@+id/b_8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/b_back"
            app:layout_constraintEnd_toStartOf="@+id/b_quit"
            />

    <ImageButton
            android:id="@+id/b_quit"
            android:src="@drawable/ic_close_black_24dp"
            android:contentDescription="@string/b_quit_text"
            android:tag="16"
            android:layout_width="60dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@+id/b_9"
            app:layout_constraintStart_toEndOf="@+id/b_0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <Button
            android:text="@string/b_1_text"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:id="@+id/b_1"
            android:tag="50"
            style="@style/Widget.AppCompat.Button.Small"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/b_2"
            app:layout_constraintBottom_toTopOf="@+id/b_4"/>

    <Button
            android:text="@string/b_2_text"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:id="@+id/b_2"
            android:tag="51"
            style="@style/Widget.AppCompat.Button.Small"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/b_1"
            app:layout_constraintEnd_toStartOf="@+id/b_3"
            app:layout_constraintBottom_toTopOf="@+id/b_5"
            />

    <Button
            android:text="@string/b_3_text"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:id="@+id/b_3"
            android:tag="52"
            app:layout_constraintStart_toEndOf="@+id/b_2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/b_6"
            />

    <Button
            android:text="@string/b_4_text"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:id="@+id/b_4"
            android:tag="53"
            style="@style/Widget.AppCompat.Button.Small"
            app:layout_constraintTop_toBottomOf="@+id/b_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/b_5"
            app:layout_constraintBottom_toTopOf="@+id/b_7"/>

    <Button
            android:text="@string/b_5_text"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:id="@+id/b_5"
            android:tag="54"
            style="@style/Widget.AppCompat.Button.Small"
            app:layout_constraintTop_toBottomOf="@+id/b_2"
            app:layout_constraintStart_toEndOf="@+id/b_4"
            app:layout_constraintEnd_toStartOf="@+id/b_6"
            app:layout_constraintBottom_toTopOf="@+id/b_8"/>

    <Button
            android:text="@string/b_6_text"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:id="@+id/b_6"
            android:tag="55"
            style="@style/Widget.AppCompat.Button.Small"
            app:layout_constraintTop_toBottomOf="@+id/b_3"
            app:layout_constraintStart_toEndOf="@+id/b_5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/b_9"/>

    <Button
            android:text="@string/b_7_text"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:id="@+id/b_7"
            android:tag="56"
            style="@style/Widget.AppCompat.Button.Small"
            app:layout_constraintTop_toBottomOf="@+id/b_4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/b_8"
            app:layout_constraintBottom_toTopOf="@+id/b_0"/>

    <Button
            android:text="@string/b_8_text"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:id="@+id/b_8"
            android:tag="57"
            style="@style/Widget.AppCompat.Button.Small"
            app:layout_constraintTop_toBottomOf="@+id/b_5"
            app:layout_constraintStart_toEndOf="@+id/b_7"
            app:layout_constraintEnd_toStartOf="@+id/b_9"
            app:layout_constraintBottom_toTopOf="@+id/b_0"/>

    <Button
            android:text="@string/b_9_text"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:id="@+id/b_9"
            android:tag="58"
            style="@style/Widget.AppCompat.Button.Small"
            app:layout_constraintTop_toBottomOf="@+id/b_6"
            app:layout_constraintStart_toEndOf="@+id/b_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/b_0"/>

</android.support.constraint.ConstraintLayout>