<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <Button
            android:text="@string/b_up_arrow_text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/b_up_arrow"
            android:tag='5'
            style="@style/Widget.AppCompat.Button.Small"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/b_right_arrow"
            app:layout_constraintBottom_toTopOf="@+id/b_ok"
            app:layout_constraintStart_toStartOf="@+id/b_ok"
            />

    <Button
            android:text="@string/b_left_arrow_text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/b_left_arrow"
            android:tag='6'
            style="@style/Widget.AppCompat.Button.Small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/b_ok"
            app:layout_constraintBottom_toTopOf="@+id/b_down_arrow"
            app:layout_constraintTop_toTopOf="@+id/b_ok"/>

    <Button
            android:text="@string/b_ok_text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/b_ok"
            android:tag='7'
            style="@style/Widget.AppCompat.Button.Small"
            app:layout_constraintTop_toBottomOf="@+id/b_up_arrow"
            app:layout_constraintStart_toEndOf="@+id/b_left_arrow"
            app:layout_constraintEnd_toStartOf="@+id/b_right_arrow"
            app:layout_constraintBottom_toTopOf="@+id/b_down_arrow"/>

    <Button
            android:text="@string/b_right_arrow_text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/b_right_arrow"
            android:tag='8'
            style="@style/Widget.AppCompat.Button.Small"
            app:layout_constraintStart_toEndOf="@+id/b_ok"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/b_down_arrow"
            app:layout_constraintTop_toTopOf="@+id/b_ok"/>

    <Button
            android:text="@string/b_down_arrow_text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/b_down_arrow"
            android:tag='9'
            style="@style/Widget.AppCompat.Button.Small"
            app:layout_constraintTop_toBottomOf="@+id/b_ok"
            app:layout_constraintEnd_toStartOf="@+id/b_right_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/b_ok"/>

</android.support.constraint.ConstraintLayout>