<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <ImageButton
            android:id="@+id/b_fast_rewind"
            android:src="@drawable/ic_fast_rewind_black_24dp"
            android:contentDescription="@string/b_fast_rewind_text"
            android:tag="18"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/b_record"/>

    <ImageButton
            android:id="@+id/b_record"
            android:src="@drawable/ic_fiber_manual_record_black_24dp"
            android:contentDescription="@string/b_record_text"
            android:tag="24"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/b_fast_rewind"
            app:layout_constraintEnd_toStartOf="@+id/b_stop"/>

    <ImageButton
            android:id="@+id/b_stop"
            android:src="@drawable/ic_stop_black_24dp"
            android:contentDescription="@string/b_stop_text"
            android:tag="20"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/b_record"
            app:layout_constraintEnd_toStartOf="@+id/b_play_pause"/>

    <ImageButton
            android:id="@+id/b_play_pause"
            android:src="@drawable/ic_play_arrow_black_24dp"
            android:contentDescription="@string/b_play_pause_text"
            android:tag="23"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/b_stop"
            app:layout_constraintEnd_toStartOf="@+id/b_fast_forward"/>

    <ImageButton
            android:id="@+id/b_fast_forward"
            android:src="@drawable/ic_fast_forward_black_24dp"
            android:contentDescription="@string/b_fast_forward_text"
            android:tag="19"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/b_play_pause"
            app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>