<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/b_power"
            android:tag='0'
            app:layout_constraintStart_toEndOf="@+id/edit_text_ip_address"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/edit_text_ip_address"
            app:layout_constraintBottom_toBottomOf="@+id/edit_text_ip_address"
            android:contentDescription="@string/b_power_text"
            android:src="@drawable/ic_power_settings_new_black_24dp"/>

    <EditText
            android:layout_width="177dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/edit_text_ip_address_default"
            android:ems="10"
            android:id="@+id/edit_text_ip_address"
            app:layout_constraintStart_toEndOf="@+id/b_search_target"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            tools:ignore="LabelFor"
            app:layout_constraintEnd_toStartOf="@+id/b_power"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintTop_toTopOf="@+id/b_search_target"
            app:layout_constraintBottom_toBottomOf="@+id/b_search_target"/>

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/b_search_target"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/edit_text_ip_address"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:contentDescription="@string/b_search_target_text"
            android:src="@drawable/ic_sync_black_24dp"/>

    <include
            android:layout_width="159dp"
            android:layout_height="204dp"
            layout="@layout/button_0_to_9"
            android:id="@+id/include3"
            app:layout_constraintStart_toEndOf="@+id/include2"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            app:layout_constraintTop_toTopOf="@+id/include2"
            />

    <include
            android:layout_width="159dp"
            layout="@layout/dpad"
            android:id="@+id/include"
            app:layout_constraintStart_toStartOf="@+id/include3"
            app:layout_constraintEnd_toEndOf="@+id/include3"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/include3"
            android:layout_height="159dp"
            />

    <include
            android:layout_width="144dp"
            android:layout_height="86dp"
            layout="@layout/up_down"
            android:id="@+id/include2"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/b_search_target"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>

</android.support.constraint.ConstraintLayout>